# pip2cmake

./: CMakeLists.txt  README.md  main.cpp  module.cpp  module.h  pip.cpp  pip.h  utilities.cpp  utilities.h
